2003-12-15 Andy Ruder <aeruder at ksu dot edu>
 * Lots of minor fixes to get OSX working.
 * Got Preferences, Bundle Setup, Channels, User lists working on OSX.

2003-12-14 Andy Ruder <aeruder at ksu dot edu>
 * Bundle setup now auto applies its changes.

2003-12-13 Andy Ruder <aeruder at ksu dot edu>
 * I am a retard.  I did not realize that outlets do not have an automatic
   retain when assigned to the instance variable.  Therefore I should be
   releasing those things either!  The only reason it worked was due to a
   GNUstep mem-leak.  I am a retard!
 * Fixed a bug with DCC file transfer support where it never would download
   without an explicit directory given on the /dcc get line.
 * Got the OSX port actually connected and talking in a channel.

2003-12-07 Andy Ruder <aeruder at ksu dot edu>
 * Made the serverlist reuse unconnected windows (with an option to force a
   new window)
 * Put in some checks for the validity of the download directory in dcc
   support

2003-12-06 Andy Ruder <aeruder at ksu dot edu>
 * Made a makefile fix that should disable AppKit from being linked in on OSX
   where it need not be.

2003-11-21 Andy Ruder <aeruder at ksu dot edu>
 * Decided I'm actually going to try to use this change log.
 * Hopefully fixed problem with buttons not showing up in bundle setup gui

2003-10-15 Andy Ruder <aeruder at ksu dot edu>
 * TalkSoup compiles on OS X
 * All bundles had localization info generated.
 * Moved to using a netclasses framework

2003-09-10 Andy Ruder <aeruder at ksu dot edu>
 * Got bundle setup gui in
 * Added plugin descriptions to all distributed bundles

2003-09-08 Andy Ruder <aeruder at ksu dot edu>
 * TalkSoup 0.82pre2

2003-09-01 Andy Ruder <aeruder at ksu dot edu>
 * TalkSoup 0.82pre1

2003-06-18 Andy Ruder <aeruder at yahoo dot com>
 * TalkSoup 0.81

2003-05-27 Andy Ruder <aeruder at yahoo dot com>
 * TalkSoup 0.80