@@ -3,7 +3,11 @@ BUNDLE_NAME = Highlighting
 
 BUNDLE_EXTENSION =
 
+ifeq ($(OBJC_RUNTIME_LIB), apple)
+BUNDLE_INSTALL_DIR = $(GNUSTEP_INSTALLATION_DIR)/Library/Application\ Support/TalkSoup/InFilters
+else
 BUNDLE_INSTALL_DIR = $(GNUSTEP_INSTALLATION_DIR)/Library/ApplicationSupport/TalkSoup/InFilters
+endif
 
 Highlighting_LANGUAGES = English
 Highlighting_LOCALIZED_RESOURCE_FILES = Localizable.strings
