@@ -3,7 +3,11 @@ BUNDLE_NAME = Colorizer
 
 BUNDLE_EXTENSION =
 
+ifeq ($(OBJC_RUNTIME_LIB), apple)
+BUNDLE_INSTALL_DIR = $(GNUSTEP_INSTALLATION_DIR)/Library/Application\ Support/TalkSoup/OutFilters
+else
 BUNDLE_INSTALL_DIR = $(GNUSTEP_INSTALLATION_DIR)/Library/ApplicationSupport/TalkSoup/OutFilters
+endif
 
 Colorizer_LANGUAGES = English
 Colorizer_LOCALIZED_RESOURCE_FILES = Localizable.strings
