@@ -1,6 +1,8 @@
 2003-12-15 Andy Ruder <aeruder at ksu dot edu>
  * Lots of minor fixes to get OSX working.
  * Got Preferences, Bundle Setup, Channels, User lists working on OSX.
+ * Made OSX port use the right directory for bundles (Application Support
+   as opposed to ApplicationSupport)
 
 2003-12-14 Andy Ruder <aeruder at ksu dot edu>
  * Bundle setup now auto applies its changes.
